                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-07-2006 fixed: [ 1520931 ] Custom movie thumbnail ignored when viewing from cast
 - 14-07-2006 changed: if you select a song in party mode, all songs with a earlier id is removed. more in line with itunes etc.
 - 14-07-2006 changed: folder.jpg is hidden in my pictures. cleaned up cbr/cbz support a bit.
 - 14-07-2006 added: a progress dialog is shown if loading a my program directory takes > 1.5secs.
 - 14-07-2006 fixed: wrong thumb assignment in the script window.
 - 14-07-2006 fixed: [ 1521878 ] if playing muisc, DVD disc can't be play
 - 13-07-2006 fixed: HttpApi GetCurrentlyPlaying thumb information should be more reliable
 - 13-07-2006 changed: don't wait on wrong textures when rendering video using double buffering (videowindow)
 - 13-07-2006 fixed: [ 1520935 ] Movie deleted from db if you refresh without selecting new
 - 13-07-2006 fixed: rss scroll speed should now be refresh rate and resolution independent.
 - 13-07-2006 changed: My Scripts now flatterns folders if default default.py is found
 - 12-07-2006 fixed: HttpApi GetCurrentlyPlaying so it again returns playing state
 - 12-07-2006 added: HttpApi FileUpload can now take an optional third parameter (first, continue, last) to allow large files to be uploaded in multiple chunks
 - 11-07-2006 fixed: XBMC mapped to Log message
 - 11-07-2006 fixed: masked directory listings in rars where broken
 - 11-07-2006 changed: header file cleanup and sectioned of time server client
 - 11-07-2006 changed: recompiled release rar lib without debug information to avoid all warnings about missing debug information during build
 - 11-07-2006 fixed: python sounds where broken